--- a/book/print.html
+++ b/book/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1</a></li><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">2.</strong> Chapter 2</a></li><li class="chapter-item expanded "><a href="chapter_3.html"><strong aria-hidden="true">3.</strong> Chapter 3</a></li><li class="chapter-item expanded "><a href="chapter_4.html"><strong aria-hidden="true">4.</strong> Chapter 4</a></li><li class="chapter-item expanded "><a href="chapter_5.html"><strong aria-hidden="true">5.</strong> Chapter 5</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html"><strong aria-hidden="true">1.</strong> Chapter 1</a></li><li class="chapter-item expanded "><a href="chapter_2.html"><strong aria-hidden="true">2.</strong> Chapter 2</a></li><li class="chapter-item expanded "><a href="chapter_3.html"><strong aria-hidden="true">3.</strong> Chapter 3</a></li><li class="chapter-item expanded "><a href="chapter_4.html"><strong aria-hidden="true">4.</strong> Chapter 4</a></li><li class="chapter-item expanded "><a href="chapter_5.html"><strong aria-hidden="true">5.</strong> Chapter 5</a></li><li class="chapter-item expanded "><a href="chapter_6.html"><strong aria-hidden="true">6.</strong> Chapter 6</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -298,6 +298,81 @@ pub fn double(x: u32) -&gt; u32 {
     console.log({instance});
     document.getElementById('answer').innerHTML = `
     <h2 id="42--42--instanceexportsdouble42"><a class="header" href="#42--42--instanceexportsdouble42">42 + 42 = ${instance.exports.double(42)}</a></h2>
+    See details in the console log.
+    `
+})();
+</script><h1 id="wasm-memory"><a class="header" href="#wasm-memory">WASM Memory</a></h1>
+<p><code>src/lib.js</code></p>
+<pre><pre class="playground"><code class="language-rust">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>#[no_mangle]
+pub fn alloc(len: usize) -&gt; *mut u8 {
+    let mut buf = Vec::with_capacity(len);
+    let ptr = buf.as_mut_ptr();
+    std::mem::forget(buf);
+    return ptr;
+}
+
+#[no_mangle]
+pub unsafe fn array_sum(ptr: *mut u8, len: usize) -&gt; u8 {
+    let data = Vec::from_raw_parts(ptr, len, len);
+    data.iter().sum()
+}
+
+<span class="boring">}
+</span></code></pre></pre>
+<p>Javascript</p>
+<pre><code class="language-javascript">function copyMemory(data, instance) {
+  var ptr = instance.exports.alloc(data.length);
+  var mem = new Uint8Array(instance.exports.memory.buffer, ptr, data.length);
+  mem.set(new Uint8Array(data));
+  return ptr;
+}
+</code></pre>
+<pre><code class="language-javascript">function arraySum(array, instance) {
+  var ptr = copyMemory(array, instance);
+  var res = instance.exports.array_sum(ptr, array.length);
+  return res;
+}
+</code></pre>
+<pre><code class="language-javascript">(async () =&gt; {
+    var importObject = {};
+    const { instance } = await WebAssembly.instantiateStreaming(fetch('wasm/memory/memory.wasm'), importObject);
+    console.log({instance});
+    document.getElementById('answer').innerHTML = `
+    &lt;h2&gt;arraySum([1, 2, 3, 4, 5], instance) = ${arraySum([1, 2, 3, 4, 5], instance)}&lt;/h2&gt;
+    See details in the console log.
+    `
+})();
+</code></pre>
+<div id="answer"></div>
+<h2 id="reference-3"><a class="header" href="#reference-3">Reference:</a></h2>
+<ul>
+<li><a href="https://radu-matei.com/blog/practical-guide-to-wasm-memory/#passing-arrays-to-rust-webassembly-modules">Passing arrays to Rust WebAssembly modules</a></li>
+<li><a href="https://rustwasm.github.io/docs/book/reference/js-ffi.html">JS FFI</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/instantiateStreaming">WebAssembly.instantiateStreaming()</a></li>
+</ul>
+<script>
+function copyMemory(data, instance) {
+  var ptr = instance.exports.alloc(data.length);
+  var mem = new Uint8Array(instance.exports.memory.buffer, ptr, data.length);
+  mem.set(new Uint8Array(data));
+  return ptr;
+}
+
+function arraySum(array, instance) {
+  var ptr = copyMemory(array, instance);
+  var res = instance.exports.array_sum(ptr, array.length);
+  return res;
+}
+
+(async () => {
+    var importObject = {};
+    const { instance } = await WebAssembly.instantiateStreaming(fetch('wasm/memory/memory.wasm'), importObject);
+    console.log({instance});
+    document.getElementById('answer').innerHTML = `
+    <h2 id="arraysum1-2-3-4-5-instance--arraysum1-2-3-4-5-instance"><a class="header" href="#arraysum1-2-3-4-5-instance--arraysum1-2-3-4-5-instance">arraySum([1, 2, 3, 4, 5], instance) = ${arraySum([1, 2, 3, 4, 5], instance)}</a></h2>
     See details in the console log.
     `
 })();
