add more reference links

--- a/book/print.html
+++ b/book/print.html
@@ -301,7 +301,9 @@ pub fn double(x: u32) -&gt; u32 {
     See details in the console log.
     `
 })();
-</script><h1 id="wasm-memory"><a class="header" href="#wasm-memory">WASM Memory</a></h1>
+</script><h1 id="wasm-memory-without-wasm-bindgen"><a class="header" href="#wasm-memory-without-wasm-bindgen">WASM Memory without wasm-bindgen</a></h1>
+<p>A demo of WASM memory without <a href="https://github.com/rustwasm/wasm-bindgen">wasm-bindgen</a> based on the blog
+<a href="https://radu-matei.com/blog/practical-guide-to-wasm-memory/">A practical guide to WebAssembly memory</a>.</p>
 <p><code>src/lib.js</code></p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
