--- a/book/print.html
+++ b/book/print.html
@@ -252,8 +252,8 @@ pub static SECTION: [u8; 12] = *b&quot;Hello World!&quot;;
 <h2 id="reference-1"><a class="header" href="#reference-1">Reference:</a></h2>
 <ul>
 <li><a href="https://rustwasm.github.io/docs/book/reference/js-ffi.html#custom-sections">JS FFI Custom Sections</a></li>
-<li><a href=""></a></li>
 <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/Module/Module">WebAssembly.Module() constructor</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/Module/customSections">WebAssembly.Module.customSections()</a></li>
 </ul>
 <script>
 (async () => {
@@ -368,7 +368,7 @@ pub unsafe fn array_sum(ptr: *mut u8, len: usize) -&gt; u8 {
 <ul>
 <li><a href="https://radu-matei.com/blog/practical-guide-to-wasm-memory/#passing-arrays-to-rust-webassembly-modules">Passing arrays to Rust WebAssembly modules</a></li>
 <li><a href="https://rustwasm.github.io/docs/book/reference/js-ffi.html">JS FFI</a></li>
-<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/instantiateStreaming">WebAssembly.instantiateStreaming()</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/instantiate">WebAssembly.instantiate()</a></li>
 </ul>
 <script>
 function copyMemory(data, instance) {
