- [WebAssembly.instantiate()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/instantiate)

--- a/book/print.html
+++ b/book/print.html
@@ -300,7 +300,7 @@ pub fn double(x: u32) -&gt; u32 {
 <h2 id="reference-2"><a class="header" href="#reference-2">Reference:</a></h2>
 <ul>
 <li><a href="https://rustwasm.github.io/docs/book/reference/js-ffi.html">JS FFI</a></li>
-<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/instantiateStreaming">WebAssembly.instantiateStreaming()</a></li>
+<li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/WebAssembly/instantiate">WebAssembly.instantiate()</a></li>
 </ul>
 <script>
 (async () => {
@@ -314,7 +314,8 @@ pub fn double(x: u32) -&gt; u32 {
     See details in the console log.
     `
 })();
-</script><h1 id="wasm-memory-without-wasm-bindgen"><a class="header" href="#wasm-memory-without-wasm-bindgen">WASM Memory without wasm-bindgen</a></h1>
+</script>
+<h1 id="wasm-memory-without-wasm-bindgen"><a class="header" href="#wasm-memory-without-wasm-bindgen">WASM Memory without wasm-bindgen</a></h1>
 <p>A demo of WASM memory without <a href="https://github.com/rustwasm/wasm-bindgen">wasm-bindgen</a> based on the blog
 <a href="https://radu-matei.com/blog/practical-guide-to-wasm-memory/">A practical guide to WebAssembly memory</a>.</p>
 <p><code>src/lib.js</code></p>
